# ChangeLog for media-video/mjpegtools
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.87 2005/05/08 11:36:15 kloeri Exp $

  08 May 2005; Bryan Østergaard <kloeri@gentoo.org>
  mjpegtools-1.6.2-r4.ebuild:
  ~alpha keyword.

*mjpegtools-1.6.2-r4 (17 Apr 2005)

  17 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +mjpegtools-1.6.2-r4.ebuild:
  added a patch to fix #78404. thanks to Kevin F. Quinn <co@kevquinn.com> and
  Ned Ludd <solar@gentoo.org>

  16 Apr 2005; Jan Brinkmann <luckyduck@gentoo.org>
  +files/mjpegtools-1.6.2-libquicktime094.patch, mjpegtools-1.6.2-r3.ebuild:
  added patch to make compilation with libquicktime-0.9.4 possible (patch based
  on upstream cvs), also enabled largefile support which fixes #66039

  27 Mar 2005; Luca Barbato <lu_zero@gentoo.org>
  +files/mjpegtools-1.6.2-configure.patch, mjpegtools-1.6.2-r3.ebuild:
  Updated ebuild, from Diego PettenÃ² <dgp85@users.sourceforge.net>

  26 Mar 2005; Jeremy Huddleston <eradicator@gentoo.org>
  -files/1.6.0-r7-ppc.patch, -files/mjpegtools-1.6.0-gcc3.patch,
  -files/mjpegtools-1.6.1.91-fPIC.patch,
  -files/mjpegtools-1.6.1.92-fPIC.patch,
  -files/mjpegtools-1.6.1.93-fPIC.patch, -files/no-x11-lib.patch,
  -mjpegtools-1.6.0-r7.ebuild, -mjpegtools-1.6.1.90-r2.ebuild,
  -mjpegtools-1.6.2-r1.ebuild, mjpegtools-1.6.2-r3.ebuild:
  Removing older versions. Fixing avifile dependency to accept newer versions
  as it does compile with them.

  15 Mar 2005; Luca Barbato <lu_zero@gentoo.org> mjpegtools-1.6.2-r3.ebuild:
  yet another workaround for gcc

  13 Mar 2005; Luca Barbato <lu_zero@gentoo.org>
  +files/mjpegtools-1.6.2-dv.patch, mjpegtools-1.6.2-r3.ebuild:
  Fixed libdv issues

  10 Mar 2005; Jan Brinkmann <luckyduck@gentoo.org>
  mjpegtools-1.6.2-r3.ebuild:
  changed the dv and yv12 use_enable logic, fixes #79379
