@@ -1,8 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mjpegtools/Attic/mjpegtools-1.6.2-r3.ebuild,v 1.22 2005/04/16 12:55:34 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mjpegtools/Attic/mjpegtools-1.6.2-r3.ebuild,v 1.23 2005/05/15 02:12:47 flameeyes Exp $
 
-inherit flag-o-matic gcc eutils
+inherit flag-o-matic toolchain-funcs eutils
 
 M4V="1"
 
