@@ -1,8 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/Attic/transcode-0.6.11.ebuild,v 1.18 2005/05/10 15:49:26 flameeyes Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/Attic/transcode-0.6.11.ebuild,v 1.19 2005/05/15 02:10:04 flameeyes Exp $
 
-inherit libtool flag-o-matic eutils gcc
+inherit libtool flag-o-matic eutils toolchain-funcs
 
 MY_P="${P/_pre/.}"
 S=${WORKDIR}/${MY_P}
