@@ -1,8 +1,8 @@
 # Copyright 1999-2005 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/Attic/transcode-0.6.12-r2.ebuild,v 1.6 2005/03/09 18:59:01 luckyduck Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/Attic/transcode-0.6.12-r2.ebuild,v 1.7 2005/05/15 02:10:04 flameeyes Exp $
 
-inherit libtool flag-o-matic eutils gcc
+inherit libtool flag-o-matic eutils toolchain-funcs
 
 # dont strip binarys causes missing symbol problems
 # with pvm compiles
