@@ -1,6 +1,11 @@
 # ChangeLog for media-video/transcode
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/ChangeLog,v 1.107 2005/05/10 21:41:32 lu_zero Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/transcode/ChangeLog,v 1.108 2005/05/15 02:10:04 flameeyes Exp $
+
+  15 May 2005; Diego Pettenò <flameeyes@gentoo.org>
+  transcode-0.6.11.ebuild, transcode-0.6.12-r1.ebuild,
+  transcode-0.6.12-r2.ebuild:
+  Moved to use toolchain-functs eclass.
 
   10 May 2005; Luca Barbato <lu_zero@gentoo.org> transcode-0.6.14-r2.ebuild:
   Marked x86
