@@ -1,6 +1,10 @@
 # ChangeLog for media-video/mjpegtools
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.87 2005/05/08 11:36:15 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mjpegtools/ChangeLog,v 1.88 2005/05/15 02:12:47 flameeyes Exp $
+
+  15 May 2005; Diego Pettenò <flameeyes@gentoo.org>
+  mjpegtools-1.6.2-r3.ebuild, mjpegtools-1.6.2-r4.ebuild:
+  Moved to use toolchain-functs eclass.
 
   08 May 2005; Bryan Østergaard <kloeri@gentoo.org>
   mjpegtools-1.6.2-r4.ebuild:
